--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/node": "18.15.9",
         "turbo": "1.8.5",
         "typedoc": "0.23.28",
+        "typedoc-just-the-docs-theme": "^0.0.1",
         "typedoc-monorepo-link-types": "0.0.4",
         "typedoc-plugin-markdown": "3.14.0",
         "typescript": "5.0.2",
