--- a/starter/package.json
+++ b/starter/package.json
@@ -12,9 +12,10 @@
         "@types/node": "18.15.9",
         "@types/react": "18.0.29",
         "@types/react-dom": "18.0.11",
-        "@zera-ts/mnemonic": "workspace:^0.0.1",
-        "@zera-ts/storage": "workspace:^0.0.1",
-        "@zera-ts/wordlists": "workspace:^0.0.1",
+        "@zera-ts/logger": "workspace:*",
+        "@zera-ts/mnemonic": "workspace:*",
+        "@zera-ts/storage": "workspace:*",
+        "@zera-ts/wordlists": "workspace:*",
         "eslint": "8.36.0",
         "eslint-config-next": "13.2.4",
         "next": "13.2.4",
