--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@zera-ts/keyring",
+    "name": "@zera-ts/logger",
     "version": "0.0.1",
-    "description": "TODO",
+    "description": "ZeraLogger is a versatile and customizable logging package for TypeScript applications. It provides various log levels, configurable outputs, and supports log context.",
     "license": "Apache-2.0",
     "main": "dist/index.js",
     "module": "dist/index.mjs",
@@ -31,9 +31,7 @@
         "src"
     ],
     "dependencies": {
-        "@noble/hashes": "1.3.0",
-        "@zera-ts/bytes": "workspace:^0.0.1",
-        "@zera-ts/wordlists": "workspace:^0.0.1"
+        "chalk": "4.1.2"
     },
     "devDependencies": {
         "tsup": "6.7.0"
