--- a/starter/package.json
+++ b/starter/package.json
@@ -9,7 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@types/node": "18.15.9",
+        "@types/node": "^18.15.0",
         "@types/react": "18.0.29",
         "@types/react-dom": "18.0.11",
         "@zera-ts/logger": "workspace:*",
