--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "scripts": {
         "build": "turbo run build --output-logs new-only",
         "docs": "typedoc",
+        "lint": "eslint ./packages --ext .ts,.tsx --cache",
         "test": "turbo run test --output-logs new-only",
         "prettier:check": "turbo run prettier:check --output-logs new-only",
-        "prettier:fix": "turbo run prettier:fix --output-logs new-only"
+        "prettier:fix": "turbo run prettier:fix --output-logs new-only",
+        "gpt": "node ./scripts/gpt/dist/index.mjs"
     },
     "devDependencies": {
         "@types/node": "^18.15.0",
-        "prettier": "^2.8.7",
+        "@typescript-eslint/eslint-plugin": "5.56.0",
+        "@typescript-eslint/parser": "5.56.0",
+        "eslint": "8.36.0",
+        "prettier": "2.8.7",
         "turbo": "1.8.5",
         "typedoc": "0.23.28",
         "typedoc-just-the-docs-theme": "^0.0.1",
