--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -5,5 +5,6 @@
         "types": ["@types/node"],
         "noEmit": true,
         "allowJs": true
-    }
+    },
+    "exclude": ["node_modules", ".eslintrc.js"]
 }
