--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
         "test": "turbo run test --output-logs new-only",
         "prettier:check": "turbo run prettier:check --output-logs new-only",
         "prettier:fix": "turbo run prettier:fix --output-logs new-only",
-        "gpt": "node ./scripts/gpt/dist/index.mjs"
+        "gpt": "cross-env LOG_LEVEL='DEBUG'  node ./packages/code-summary/dist/cli/index.mjs"
     },
     "devDependencies": {
         "@types/node": "^18.15.0",
         "@typescript-eslint/eslint-plugin": "5.56.0",
         "@typescript-eslint/parser": "5.56.0",
+        "cross-env": "^7.0.3",
         "eslint": "8.36.0",
         "prettier": "2.8.7",
         "turbo": "1.8.5",
