--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
         },
         "test": {
             "dependsOn": ["build"],
-            "inputs": ["src/**/*.{ts,tsx}", "__tests__/**/*.{ts,tsx}"]
+            "inputs": ["src/**/*.{ts,tsx}"]
         },
         "prettier:check": {
             "inputs": ["**/*.{ts,tsx,js,jsx,json,md,css,yml,yaml}"]
