--- a/package.json
+++ b/package.json
@@ -18,16 +18,18 @@
     },
     "devDependencies": {
         "@types/node": "^18.15.0",
-        "@typescript-eslint/eslint-plugin": "5.56.0",
-        "@typescript-eslint/parser": "5.56.0",
-        "eslint": "8.36.0",
+        "@typescript-eslint/eslint-plugin": "5.57.0",
+        "@typescript-eslint/parser": "5.57.0",
+        "eslint": "8.37.0",
         "prettier": "2.8.7",
-        "turbo": "1.8.5",
+        "ts-node": "10.9.1",
+        "tsup": "6.7.0",
+        "turbo": "1.8.8",
         "typedoc": "0.23.28",
         "typedoc-just-the-docs-theme": "^0.0.1",
         "typedoc-monorepo-link-types": "0.0.4",
         "typedoc-plugin-markdown": "3.14.0",
-        "typescript": "5.0.2",
-        "vitest": "0.29.7"
+        "typescript": "5.0.3",
+        "vitest": "0.29.8"
     }
 }
