--- a/packages/keyring/package.json
+++ b/packages/keyring/package.json
@@ -32,11 +32,8 @@
     ],
     "dependencies": {
         "@noble/hashes": "1.3.0",
-        "@zera-ts/bytes": "workspace:^0.0.1",
-        "@zera-ts/wordlists": "workspace:^0.0.1"
-    },
-    "devDependencies": {
-        "tsup": "6.7.0"
+        "@zera-ts/bytes": "workspace:*",
+        "@zera-ts/wordlists": "workspace:*"
     },
     "scripts": {
         "build": "tsup --dts",
