--- a/packages/hd-wallet/package.json
+++ b/packages/hd-wallet/package.json
@@ -31,6 +31,7 @@
         "src"
     ],
     "dependencies": {
+        "@zera-ts/logger": "workspace:*",
         "@zera-ts/mnemonic": "workspace:*"
     },
     "scripts": {
