--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "prettier:fix": "turbo run prettier:fix --output-logs new-only"
     },
     "devDependencies": {
+        "@changesets/cli": "2.26.1",
         "@types/node": "^18.15.0",
         "@typescript-eslint/eslint-plugin": "5.57.0",
         "@typescript-eslint/parser": "5.57.0",
