--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,6 @@
 name: RELEASE
 on:
-  push:
+  push:    
 env:
   NODE_VERSION: 18.15.0
   PNPM_VERSION: 7.27.1
@@ -19,3 +19,6 @@ jobs:
         uses: changesets/action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        with:
+          publish: pnpm ci:release
