--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "scripts": {
         "build": "turbo run build --output-logs new-only",
+        "ci:release": "pnpm build && changeset publish",
         "docs": "typedoc",
         "lint": "eslint ./packages --ext .ts,.tsx --cache",
         "test": "turbo run test --output-logs new-only",
@@ -17,6 +18,7 @@
         "prettier:fix": "turbo run prettier:fix --output-logs new-only"
     },
     "devDependencies": {
+        "@changesets/cli": "2.26.1",
         "@types/node": "^18.15.0",
         "@typescript-eslint/eslint-plugin": "5.57.0",
         "@typescript-eslint/parser": "5.57.0",
