--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,4 +24,6 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         with:
           version: pnpm changeset version
+          commit: "ci(changesets): versioning packages"
+          title: "ci(changesets): versioning packages"
           publish: pnpm ci:release
