--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
     name: Semantic PR title
     runs-on: ubuntu-20.04  
     steps:
+      - uses: actions/checkout@v3
       - name: Semantic Pull Request
         uses: amannn/action-semantic-pull-request@v4
         with:
