--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,8 @@ jobs:
     timeout-minutes: 15
   semantic-pull-request:
     name: Semantic PR title
-    runs-on: ubuntu-20.04  
+    runs-on: ubuntu-20.04
+    if: github.event_name == 'pull_request_target'
     steps:
       - uses: actions/checkout@v3
       - name: Semantic Pull Request
